Correction overflow home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,8 +143,8 @@ a:hover {
 }
 
 .custom_homepage_blck {
-    max-height: 260px;
-    overflow-y: scroll;
+    max-height: 235px;
+    overflow-y: auto;
 }
 /* Responsive Youtube Video */
 .flex-video {
@@ -174,6 +174,10 @@ a:hover {
 }
 .modal_custom {
     padding-top: 100px;
+}
+
+#partners .img-responsive {
+    margin: 0 auto;
 }
 /**********************
  *** register.html ****
